# CRocq

./: .gitignore  CRocq.opam  README.md  TODO.md  _CoqProject  dune-project
_build/: .db  .digest-db  log
_build/default/: README.md  categories.dune-package  categories.install
_build/default/theories/Algebra/: Algebra.v  Bisimulation.v  CategoryAlgebra.v  CategoryCoAlgebra.v
_build/default/theories/Category/: Category.v  Functor.v
_build/default/theories/Embedding/: CategoryType.v  FunctorsType.v
_build/default/theories/Examples/: CoAlgebraStream.v
_build/default/theories/Examples/FRP/: Yampa.v  Yampa2.v
examples/FRP/: Map.v  Memory.v  Prelim.v  StateMonad.v  Util.v  Yampa.v  Yampa2.v  YampaRef.v  dune
examples/Streams/: CoAlgebraStream.v.old  Stream.v  dune
examples/Yampa/: Stream.v  StreamFunction.v  dune
theories/Algebra/: Algebra.v  Bisimulation.v  CatAlgebra.v  CatCoalgebra.v  CoAlgebra.v  Coalgebra.v  dune
theories/Category/: Adjunction.v  Category.v  CategoryCat.v  Cone.v  FormalMonad.v  Functor.v  Limit.v  Monad.v  Transformation.v  dune
theories/Embedding/: Arrow.v  ArrowType.v  CategoryType.v  FunctorsType.v  Monad.v  dune
theories/Examples/: CoAlgebraStream.v  Stream.v  dune
theories/Examples/FRP/: Map.v  Memory.v  Prelim.v  StateMonad.v  Yampa.v  Yampa2.v  YampaRef.v  dune
theories/Instances/: AlgebraCat.v  CategoryAlgebra.v  CategoryCat.v  CategoryCoAlgebra.v  CategoryType.v  FunctorList.v  FunctorOption.v  ListFunct.v  TransformationListOption.v  TypeCat.v  dune
theories/Types/: Data.v  FStream.v  Nat.v  Stream.v  dune
(+23 files in other folders)
